tests/ui/form_data_tuple_struct.stderr
error: #[derive(FormData)] cannot be used on tuple structs
 --> $DIR/form_data_tuple_struct.rs:4:10
  |
4 | #[derive(FormData, Validate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `FormData` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct has unnamed fields

  = help: #[derive(Validate)] can only be used on structs with named fields

 --> $DIR/form_data_tuple_struct.rs:5:18
  |
5 | struct MyFormData(String);
  |                  ^^^^^^^^
